po: update po/pt_BR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -31,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-01 11:46+0000\n"
-"Last-Translator: Débora Maia <debora@dotpro.com.br>\n"
+"PO-Revision-Date: 2016-12-08 19:50+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2365,7 +2365,7 @@ msgstr "Desconectado"
 msgid ""
 "The page \"%1\" will open in a popup. If it does not appear automatically, "
 "check your browser for notifications."
-msgstr "A página \"%1\" será aberto em um pop-up. Se ele não aparecer automaticamente, verifique o seu navegador para notificações."
+msgstr "A página \"%1\" será aberta em um pop-up. Se ele não aparecer automaticamente, verifique o seu navegador para notificações."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Cannot open link. Unrecognized mode."
@@ -3115,7 +3115,7 @@ msgid ""
 "from the dashboard. Please first enable CiviCRM invoicing functionality <a "
 "href='%1'>Administer > CiviContribute > CiviContribute Component "
 "Settings</a>"
-msgstr "A fim de permitir que usuários conectados baixem faturas e notas de crédito do painel. Por favor, primeiro habilitar CiviCRM funcionalidade facturação <a href='%1'>Administrar > CiviContribute > Configurações de Componentes CiviContribute</a>"
+msgstr "A fim de permitir que usuários conectados baixem faturas e notas de crédito do painel. Por favor, primeiro habilite a funcionalidade de faturamento do CiviCRM <a href='%1'>Administração > CiviContribute > Configurações de Componentes CiviContribute</a>"
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
