po: update po/pt_BR/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/menu.po
+++ b/po/pt_BR/menu.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-18 05:42+0000\n"
+"PO-Revision-Date: 2016-12-08 19:48+0000\n"
 "Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -2160,7 +2160,7 @@ msgstr "Relatório detalhado para prospecção, fone-banking, listas de percurso
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr "Métodos de Pagametos"
+msgstr "Métodos de Pagamento"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2205,7 +2205,7 @@ msgstr "Componentes"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr "Extenções"
+msgstr "Extensões"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
