--- a/po/fi_FI/campaign.po
+++ b/po/fi_FI/campaign.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Pinja-Liina Jalkanen <pinjaliina@iki.fi>, 2016
 # Tomi Toivio <tomi@sange.fi>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-12-09 14:59+0000\n"
+"Last-Translator: Pinja-Liina Jalkanen <pinjaliina@iki.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -905,7 +906,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "new campaign"
-msgstr ""
+msgstr "uusi kampanja"
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Select the campaign for which survey is created."
