po: update po/fi_FI/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fi_FI/extension.po
+++ b/po/fi_FI/extension.po
@@ -6,14 +6,15 @@
 # Antti Kekki <antti.kekki@gmail.com>, 2013
 # Antti Kekki <antti.kekki@gmail.com>, 2013
 # Antti Kuosmanen <antti@seravo.fi>, 2014
+# Pinja-Liina Jalkanen <pinjaliina@iki.fi>, 2016
 # Tomi Toivio <tomi@sange.fi>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-12-09 14:37+0000\n"
+"Last-Translator: Pinja-Liina Jalkanen <pinjaliina@iki.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -58,7 +59,7 @@ msgstr "Kelvoton juurihakemisto"
 
 #: CRM/Extension/Container/Basic.php
 msgid "An extension container has been defined with a blank directory."
-msgstr "Laajennoksen säilö on määritelty tyhjällä hakemistolla."
+msgstr "Laajennuksen säiliö on määritelty tyhjällä hakemistolla."
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base URL"
@@ -66,7 +67,7 @@ msgstr "Kelvoton juuriosoite"
 
 #: CRM/Extension/Container/Basic.php
 msgid "An extension container has been defined with a blank URL."
-msgstr "Laajennoksen säilö on määritelty tyhjällä URL-osoitteella."
+msgstr "Laajennuksen säiliö on määritelty tyhjällä URL-osoitteella."
 
 #: CRM/Extension/Container/Basic.php
 msgid ""
@@ -140,13 +141,13 @@ msgstr ""
 
 #: CRM/Extension/Manager/Payment.php
 msgid "Failed to load file (%3) for payment processor (%1) while running \"%2\""
-msgstr "Ei voinut ladata tiedostoa (%3) maksunvälittäjälle (%1) ajettaessa \"%2\""
+msgstr "Ei voinut ladata tiedostoa (%3) maksunvälittäjälle (%1) ajettaessa \"%2\":ta"
 
 #: CRM/Extension/Manager/Payment.php
 msgid ""
 "Failed to determine file path for payment processor (%1) while running "
 "\"%2\""
-msgstr "Ei pysty määrittämään tiedostopolkua maksunvälittäjälle (%1) ajettaessa \"%2\""
+msgstr "Ei pysty määrittämään tiedostopolkua maksunvälittäjälle (%1) ajettaessa \"%2\":ta"
 
 #: CRM/Extension/Manager/Payment.php
 msgid "Unrecognized payment hook (%1) in %2::%3"
