--- a/po/sr_RS@latin/case.po
+++ b/po/sr_RS@latin/case.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-24 13:42+0000\n"
+"PO-Revision-Date: 2016-12-09 13:43+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -33,11 +33,11 @@ msgstr ""
 
 #: CRM/Case/BAO/Case.php
 msgid "Move To Case"
-msgstr ""
+msgstr "Pomeri u predmet"
 
 #: CRM/Case/BAO/Case.php
 msgid "Copy To Case"
-msgstr ""
+msgstr "Kopiraj u predmet"
 
 #: CRM/Case/BAO/Case.php
 msgid "File %1 does not exist or is not readable"
@@ -45,7 +45,7 @@ msgstr "Fajl %1 ne postoji ili se ne može pročitati"
 
 #: CRM/Case/BAO/Case.php
 msgid "Invalid case ID ( %1 ) in TO: field."
-msgstr ""
+msgstr "Nevažeći ID predmeta ( %1 ) u polju KA:"
 
 #: CRM/Case/BAO/Case.php
 msgid ""
@@ -54,11 +54,11 @@ msgstr ""
 
 #: CRM/Case/BAO/Case.php
 msgid "Role in Case"
-msgstr ""
+msgstr "Uloga u predmetu"
 
 #: CRM/Case/BAO/Case.php
 msgid "View Case"
-msgstr ""
+msgstr "Vidi predmet"
 
 #: CRM/Case/BAO/Case.php
 msgid "Case %1 reassigned client from %2 to %3. New Case ID is %4."
@@ -72,7 +72,7 @@ msgstr ""
 
 #: CRM/Case/BAO/Case.php
 msgid "Case %1 merged into case %2"
-msgstr ""
+msgstr "Predmet %1 spojen sa predmetom %2"
 
 #: CRM/Case/BAO/CaseType.php
 msgid ""
@@ -83,15 +83,15 @@ msgstr ""
 
 #: CRM/Case/BAO/Query.php
 msgid "Case %1 My Cases"
-msgstr ""
+msgstr "Predmet %1 Moji predmeti"
 
 #: CRM/Case/BAO/Query.php
 msgid "Case %1 All Cases"
-msgstr ""
+msgstr "Predmet %1 Svi predmeti"
 
 #: CRM/Case/BAO/Query.php
 msgid "Find Deleted Cases"
-msgstr ""
+msgstr "Nađi obrisane predmete"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Subject %1 '%2'"
@@ -190,7 +190,7 @@ msgstr "Definicija tipa predmeta"
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 #: CRM/Case/Form/Activity/LinkCases.php
 msgid "Case Id not found."
-msgstr ""
+msgstr "ID Predmeta nije pronađen."
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 #: CRM/Case/Form/Activity/LinkCases.php
@@ -247,15 +247,15 @@ msgstr "Odabrani predmet je već linkovan."
 
 #: CRM/Case/Form/Activity/OpenCase.php
 msgid "Case opened successfully."
-msgstr ""
+msgstr "Premet je uspešno otvoren."
 
 #: CRM/Case/Form/Activity.php
 msgid "You do not have any active Case Types"
-msgstr ""
+msgstr "Nemate aktivnih tipova predmeta"
 
 #: CRM/Case/Form/Activity.php
 msgid "You can not add another '%1' activity to this case. %2"
-msgstr ""
+msgstr "Ne možete dodati još jednu '%1' aktivnost ovom predmetu. %2 "
 
 #: CRM/Case/Form/Activity.php
 msgid "Do you want to <a %1>edit the existing activity</a>?"
@@ -298,7 +298,7 @@ msgstr "Sa kontaktom(kontaktima)"
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
-msgstr ""
+msgstr "Istorija revizije aktivnosti"
 
 #: CRM/Case/Form/Case.php
 msgid "You do not have any active %1"
@@ -336,7 +336,7 @@ msgstr "Odabrani predmet je povraćen. "
 
 #: CRM/Case/Form/CaseView.php
 msgid "Related Cases"
-msgstr ""
+msgstr "Povezani predmeti"
 
 #: CRM/Case/Form/CaseView.php
 msgid "%1 Related Case"
@@ -359,7 +359,7 @@ msgstr ""
 
 #: CRM/Case/Form/CaseView.php
 msgid "Select Case for Merge"
-msgstr ""
+msgstr "Odaberite predmet za spajanje."
 
 #: CRM/Case/Form/CaseView.php
 msgid "- select type -"
@@ -367,7 +367,7 @@ msgstr "- izaberi tip -"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Activities from the %1 activity set have been added to this case."
-msgstr ""
+msgstr "Aktivnosti iz %1 seta aktivnosti su dodate u ovaj predmet."
 
 #: CRM/Case/Form/CaseView.php
 msgid " - any reporter - "
@@ -379,7 +379,7 @@ msgstr ""
 
 #: CRM/Case/Form/CaseView.php
 msgid " - any status - "
-msgstr ""
+msgstr "- bilo koji status -"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Activity Dates - From"
@@ -395,7 +395,7 @@ msgstr "Odaberi kontakt"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Reassign Case"
-msgstr ""
+msgstr "Ponovo rasporedi predmet"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Please select a different contact."
@@ -423,11 +423,11 @@ msgstr "Ime klijenta ili email adresa"
 
 #: CRM/Case/Form/Search.php templates/CRM/Case/Page/DashBoard.tpl
 msgid "Find Cases"
-msgstr ""
+msgstr "Nađi predmete"
 
 #: CRM/Case/Form/Task/Delete.php CRM/Case/Info.php CRM/Case/Task.php
 msgid "Delete Cases"
-msgstr ""
+msgstr "Obriši predmete"
 
 #: CRM/Case/Form/Task/Delete.php
 msgid "%count case moved to trash."
@@ -445,7 +445,7 @@ msgstr[2] ""
 
 #: CRM/Case/Form/Task/Print.php
 msgid "Print Case List"
-msgstr ""
+msgstr "Štampa liste predmeta"
 
 #: CRM/Case/Form/Task/Restore.php CRM/Case/Task.php
 msgid "Restore Cases"
@@ -467,7 +467,7 @@ msgstr[2] ""
 
 #: CRM/Case/Info.php
 msgid "CiviCase Engine"
-msgstr ""
+msgstr "CiviCase Engine"
 
 #: CRM/Case/Info.php
 msgid "delete in CiviCase"
@@ -479,15 +479,15 @@ msgstr "administriraj CiviCase"
 
 #: CRM/Case/Info.php
 msgid "access my cases and activities"
-msgstr ""
+msgstr "pristup mojim predmetima i aktivnostima"
 
 #: CRM/Case/Info.php
 msgid "access all cases and activities"
-msgstr ""
+msgstr "pristup svim predmetima i aktivnostima"
 
 #: CRM/Case/Info.php
 msgid "add cases"
-msgstr ""
+msgstr "dodaj predmete"
 
 #: CRM/Case/Info.php
 msgid ""
@@ -505,16 +505,16 @@ msgstr "CiviCase kontrolna tabla"
 
 #: CRM/Case/Page/DashBoard.php
 msgid "You are not authorized to access all cases and activities."
-msgstr ""
+msgstr "Niste ovlašćeni za pristup svim predmetima i aktivnostima."
 
 #: CRM/Case/Page/Tab.php
 msgid "Are you sure you want to delete this case?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete ovaj predmet?"
 
 #: CRM/Case/Page/Tab.php CRM/Case/Selector/Search.php
 #: templates/CRM/Case/Form/Case.tpl
 msgid "Delete Case"
-msgstr ""
+msgstr "Obriši predmet"
 
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Form/CaseView.tpl
 msgid "Assign to Another Client"
@@ -523,7 +523,7 @@ msgstr "Dodeli drugom klijentu"
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Form/Task/Print.tpl
 #: templates/CRM/Case/Page/DashboardSelector.tpl
 msgid "My Role"
-msgstr ""
+msgstr "Moja uloga"
 
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Page/DashboardSelector.tpl
 msgid "Most Recent"
@@ -535,15 +535,15 @@ msgstr ""
 
 #: CRM/Case/Selector/Search.php
 msgid "Case Search"
-msgstr ""
+msgstr "Pretraga predmeta"
 
 #: CRM/Case/Task.php
 msgid "Export Cases"
-msgstr ""
+msgstr "Eksport predmeta"
 
 #: CRM/Case/XMLProcessor/Process.php
 msgid "Configuration file could not be retrieved for case type = '%1' %2."
-msgstr ""
+msgstr "Nije moguće naći konfiguracioni fajl za tip slučaja  = '%1' %2."
 
 #: CRM/Case/XMLProcessor/Process.php
 msgid ""
@@ -560,7 +560,7 @@ msgstr ""
 msgid ""
 "Activity type %1, found in case configuration file, is not present in the "
 "database %2"
-msgstr ""
+msgstr "Aktivnost tipa %1, nađena u konfiguracionom fajlu predmeta, nije prisutna u bazi podataka %2"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Housing Support"
@@ -669,7 +669,7 @@ msgstr "Dodaj ulogu"
 
 #: ang/crmCaseType/timelineTable.html
 msgid "Reference"
-msgstr ""
+msgstr "Referenca"
 
 #: ang/crmCaseType.js
 msgid ""
@@ -682,16 +682,16 @@ msgstr "Nekompletno"
 
 #: templates/CRM/Case/Audit/Report.tpl
 msgid "Case Summary"
-msgstr ""
+msgstr "Kratak pregled predmeta"
 
 #: templates/CRM/Case/Audit/Report.tpl
 msgid "Case Roles"
-msgstr ""
+msgstr "Uloge u predmetu"
 
 #: templates/CRM/Case/Audit/Report.tpl templates/CRM/Case/Form/Activity.tpl
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Case Role"
-msgstr ""
+msgstr "Uloga u predmetu"
 
 #: templates/CRM/Case/Audit/Report.tpl
 msgid "(not assigned)"
@@ -699,19 +699,19 @@ msgstr "(nedodeljen)"
 
 #: templates/CRM/Case/Audit/Report.tpl templates/CRM/Case/Form/CaseView.tpl
 msgid "Client Relationship"
-msgstr ""
+msgstr "Odnos sa klijentom"
 
 #: templates/CRM/Case/Audit/Report.tpl
 msgid "Case Activities"
-msgstr ""
+msgstr "Aktivnosti u predmetu"
 
 #: templates/CRM/Case/Form/Activity/ChangeCaseStartDate.tpl
 msgid "Current Start Date"
-msgstr ""
+msgstr "Trenutni datum početka"
 
 #: templates/CRM/Case/Form/Activity/LinkCases.tpl
 msgid "Create link between %1 - %2 (CaseID: %3) and %4 - %5 (CaseID: %6)"
-msgstr ""
+msgstr "Poveži %1 i %2 (CaseID: %3) i %4 - %5 (CaseID: %6)"
 
 #: templates/CRM/Case/Form/Activity.tpl
 msgid "Click Delete to move this &quot;%1&quot; activity to the Trash."
@@ -727,11 +727,11 @@ msgstr "Sa drugim kontaktom(kontaktima)"
 
 #: templates/CRM/Case/Form/Activity.tpl
 msgid "With client"
-msgstr ""
+msgstr "Sa klijentom"
 
 #: templates/CRM/Case/Form/Activity.tpl
 msgid "With client(s)"
-msgstr ""
+msgstr "Sa klijentom(klijentima)"
 
 #: templates/CRM/Case/Form/Activity.tpl
 msgid "Send a Copy"
@@ -741,11 +741,11 @@ msgstr "Pošalji kopiju"
 msgid ""
 "Email a complete copy of this activity record to other people involved with "
 "the case. Click the top left box to select all."
-msgstr ""
+msgstr "Pošalji email sa kompletnom kopijom zapisa aktivnosti ostalim osobama povezanim sa ovim predmetom. Kliknite na kućicu gore levo da odaberete sve."
 
 #: templates/CRM/Case/Form/ActivityTab.tpl
 msgid "Search Filters"
-msgstr ""
+msgstr "Filteri pretrage"
 
 #: templates/CRM/Case/Form/ActivityTab.tpl
 #: templates/CRM/Case/Page/CaseDetails.tpl
@@ -758,15 +758,15 @@ msgstr ""
 
 #: templates/CRM/Case/Form/ActivityToCase.tpl
 msgid "Move to Case"
-msgstr ""
+msgstr "Pomeri u predmet"
 
 #: templates/CRM/Case/Form/ActivityToCase.tpl
 msgid "Copy to Case"
-msgstr ""
+msgstr "Kopiraj u predmet"
 
 #: templates/CRM/Case/Form/ActivityToCase.tpl
 msgid "Please select a case from the list"
-msgstr ""
+msgstr "Izaberite predmet iz liste"
 
 #: templates/CRM/Case/Form/ActivityToCase.tpl
 msgid "Unable to file on case."
@@ -774,7 +774,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/ActivityToCase.tpl
 msgid "Activity has been filed to %1 case."
-msgstr ""
+msgstr "Aktivnost je zabeležena u slučaj %1 ."
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "Created On"
@@ -786,19 +786,19 @@ msgstr ""
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "List all revisions"
-msgstr ""
+msgstr "Lista svih revizija"
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "(this is the current revision)"
-msgstr ""
+msgstr "(ovo je poslednja revizija)"
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "View current revision"
-msgstr ""
+msgstr "Vidi poslednju reviziju"
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "(this is not the current revision)"
-msgstr ""
+msgstr "(ovo nije poslednja revizija)"
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "Prompted by"
@@ -806,7 +806,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/Case.hlp
 msgid "Introduce yourself and your role within our organization."
-msgstr ""
+msgstr "Predstavite sebe i vašu ulogu u organizaciji."
 
 #: templates/CRM/Case/Form/Case.hlp
 msgid ""
@@ -819,7 +819,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/Case.hlp
 msgid "&quot;Please tell me what you would like to discuss.&quot;"
-msgstr ""
+msgstr "&quot;Recite mi o čemu želite da diskutujete.&quot;"
 
 #: templates/CRM/Case/Form/Case.hlp
 msgid "Reflect client's story back to them."
@@ -864,15 +864,15 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.js
 msgid "Please select a value"
-msgstr ""
+msgstr "Izaberite vrednost"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Clients:"
-msgstr ""
+msgstr "Klijenti:"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Add Client"
-msgstr ""
+msgstr "Dodaj klijenta"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "DOB"
@@ -880,19 +880,19 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Change case type (creates activity record)"
-msgstr ""
+msgstr "Promeni tip predmeta (kreira zapis o aktivnosti)"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Change case status (creates activity record)"
-msgstr ""
+msgstr "Promeni status predmeta (kreira zapis o aktivnosti)"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Open Date"
-msgstr ""
+msgstr "Datum otvaranja"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Change case start date (creates activity record)"
-msgstr ""
+msgstr "Promeni datum početka predmeta (kreira zapis o aktivnosti)"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Add new role"
@@ -920,7 +920,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Add members to %1"
-msgstr ""
+msgstr "Dodaj članove u %1"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "- select contacts -"
@@ -932,11 +932,11 @@ msgstr "Grupa %1 nema članove"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Case Tags"
-msgstr ""
+msgstr "Tagovi predmeta"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "There are no tags currently assigned to this case."
-msgstr ""
+msgstr "Trenutno nema tagova dodeljenih ovom predmetu."
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Add Tags"
@@ -944,19 +944,19 @@ msgstr "Dodaj tagove"
 
 #: templates/CRM/Case/Form/EditClient.tpl
 msgid "This is case is currently assigned to %1."
-msgstr ""
+msgstr "Ovaj predmet je dodeljen %1."
 
 #: templates/CRM/Case/Form/Report.tpl
 msgid "Report Parameters"
-msgstr ""
+msgstr "Parametri izveštaja"
 
 #: templates/CRM/Case/Form/Search/Common.tpl
 msgid "Case Tag(s)"
-msgstr ""
+msgstr "Tag(ovi) predmeta"
 
 #: templates/CRM/Case/Form/Search/EmptyResults.tpl
 msgid "if you are searching by client name, check your spelling"
-msgstr ""
+msgstr "Ako pretražujete po imenu klijenta, proverite vaš unos"
 
 #: templates/CRM/Case/Form/Selector.tpl
 msgid "Show recent activities"
@@ -969,7 +969,7 @@ msgstr "Sakrij aktivnosti"
 #: templates/CRM/Case/Form/Selector.tpl
 #: templates/CRM/Case/Page/DashboardSelector.tpl
 msgid "Find more cases"
-msgstr ""
+msgstr "Nađi još predmeta"
 
 #: templates/CRM/Case/Form/Task/Delete.tpl
 msgid ""
@@ -983,7 +983,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/Task/Print.tpl
 msgid "Next Scheduled Activity"
-msgstr ""
+msgstr "Sledeća zakazana aktivnost"
 
 #: templates/CRM/Case/Form/Task/Restore.tpl
 msgid ""
@@ -993,11 +993,11 @@ msgstr ""
 
 #: templates/CRM/Case/Form/Task.tpl
 msgid "Number of selected cases: %1"
-msgstr ""
+msgstr "Broj odabranih predmeta: %1"
 
 #: templates/CRM/Case/Page/CaseDetails.tpl
 msgid "There are no activities defined for this case."
-msgstr ""
+msgstr "Nema definisanih aktivnosti za ovaj predmet."
 
 #: templates/CRM/Case/Page/ConfigureError.tpl
 msgid ""
@@ -1011,51 +1011,51 @@ msgstr ""
 
 #: templates/CRM/Case/Page/ConfigureError.tpl
 msgid "CiviCase Setup documentation"
-msgstr ""
+msgstr "CiviCase dokumentacija o podešavanju"
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid "Find My Cases"
-msgstr ""
+msgstr "Nađi moje predmete"
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid "All Cases with Upcoming Activities"
-msgstr ""
+msgstr "Svi predmeti sa predstojećim aktivnostima"
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid "My Cases with Upcoming Activities"
-msgstr ""
+msgstr "Moji predmeti sa predstojećim aktivnostima"
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid "Summary of All Cases"
-msgstr ""
+msgstr "Kratak pregled svih predmeta"
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid "My Cases With Upcoming Activities"
-msgstr ""
+msgstr "Moji predmeti sa predstojećim aktivnostima"
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid "All Cases With Upcoming Activities"
-msgstr ""
+msgstr "Svi predmeti sa predstojećim aktivnostima"
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid ""
 "There are no open cases with activities scheduled in the next two weeks. Use"
 " %1 to expand your search."
-msgstr ""
+msgstr "Nema otvorenih predmeta sa zakazanim aktivnostima u naredne dve nedelje. Iskoristite %1 da proširite pretragu."
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid "My Cases With Recently Performed Activities"
-msgstr ""
+msgstr "Moji predmeti sa nedavno izvršenim aktivnostima"
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid "All Cases With Recently Performed Activities"
-msgstr ""
+msgstr "Svi predmeti sa nedavno izvršenim aktivnostima"
 
 #: templates/CRM/Case/Page/DashBoard.tpl
 msgid ""
 "There are no cases with activities scheduled in the past two weeks. Use %1 "
 "to expand your search."
-msgstr ""
+msgstr "Nema predmeta sa zakazanim aktivnostima u prethodne dve nedelje. Iskoristite %1 da proširite pretragu."
 
 #: templates/CRM/Case/Page/DashboardSelector.tpl
 msgid "Manager"
@@ -1069,11 +1069,11 @@ msgstr "Uredi aktivnost"
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "Oops, It looks like there are no active case types."
-msgstr ""
+msgstr "Ups, izgleda da nema aktivnih tipova predmeta."
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "Enable <a href='%1'>case types</a>."
-msgstr ""
+msgstr "Uključi <a href='%1'>tipove predmeta</a>."
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "This page lists all case records for %1."
@@ -1081,16 +1081,16 @@ msgstr ""
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "Click <a %1>Add Case</a> to add a case record for this contact."
-msgstr ""
+msgstr "Kliknite na <a %1>Dodaj predmet</a> da dodate zapis o predmetu za ovaj kontakt."
 
 #: templates/CRM/Case/Page/Tab.tpl
 msgid "There are no case records for this contact."
-msgstr ""
+msgstr "Nema zapisa o predmetu za ovaj kontakt."
 
 #: xml/templates/message_templates/case_activity_html.tpl
 #: xml/templates/message_templates/case_activity_text.tpl
 msgid "Activity Summary"
-msgstr ""
+msgstr "Kratak pregled aktivnosti"
 
 #: xml/templates/message_templates/case_activity_html.tpl
 #: xml/templates/message_templates/case_activity_text.tpl
@@ -1099,39 +1099,39 @@ msgstr ""
 
 #: CRM/Case/DAO/CaseActivity.php
 msgid "Case Activity ID"
-msgstr ""
+msgstr "ID Aktivnosti predmeta"
 
 #: CRM/Case/DAO/CaseContact.php
 msgid "Case Contact ID"
-msgstr ""
+msgstr "ID Kontakta za predmet"
 
 #: CRM/Case/Form/CaseView.php
 msgid "(opened %1)"
-msgstr ""
+msgstr "(Otvoreno %1)"
 
 #: CRM/Case/Form/Task/Delete.php CRM/Case/Info.php CRM/Case/Task.php
 msgid "Delete cases"
-msgstr ""
+msgstr "Obriši predmete"
 
 #: CRM/Case/Info.php
 msgid "Define case types, access deleted cases"
-msgstr ""
+msgstr "Definiši tipove predmeta, pristupi obrisanim predmetima"
 
 #: CRM/Case/Info.php
 msgid "View and edit only those cases managed by this user"
-msgstr ""
+msgstr "Pregledaj i uredi samo predmete kojima upravlja ovaj korisnik"
 
 #: CRM/Case/Info.php
 msgid "View and edit all cases (for visible contacts)"
-msgstr ""
+msgstr "Pregledaj i uredi sve predmete (za vidljive kontakte)"
 
 #: CRM/Case/Info.php
 msgid "Open a new case"
-msgstr ""
+msgstr "Otvori novi predmet"
 
 #: CRM/Case/Task.php
 msgid "Export cases"
-msgstr ""
+msgstr "Eksport predmeta"
 
 #: CRM/Case/Task.php
 msgid "Restore cases"
@@ -1175,7 +1175,7 @@ msgstr ""
 
 #: ang/crmCaseType/list.html
 msgid "Case Types"
-msgstr ""
+msgstr "Tipovi predmeta"
 
 #: templates/CRM/Case/Form/ActivityTab.tpl
 msgid "Reporter"
