--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-27 09:48+0000\n"
+"PO-Revision-Date: 2016-12-09 13:45+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -148,7 +148,7 @@ msgstr "Dodeli drugom klijentu"
 
 msgctxt "menu"
 msgid "File on Case"
-msgstr ""
+msgstr "Arhiva predmeta"
 
 msgctxt "menu"
 msgid "Case Details"
