--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-19 14:21+0000\n"
-"Last-Translator: Betty Dolfing <betty.dolfing@civicoop.org>\n"
+"PO-Revision-Date: 2016-12-10 16:13+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6441,7 +6441,7 @@ msgstr "Upload bijlage"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "Please upload document"
-msgstr ""
+msgstr "Document a.u.b. uploaden"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
@@ -6590,11 +6590,11 @@ msgstr "Leeg laten om bij het volgende interval uit te voeren."
 msgid ""
 "Compose a message on-screen for general use in emails or document output, or"
 " upload a pre-composed document for mail-merge."
-msgstr ""
+msgstr "Schrijf nu een tekst voor algemeen gebruik in e-mails of documenten of upload een document met die tekst."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Upload the document in .docx or .odt format."
-msgstr ""
+msgstr "Upload een document in het formaat docx of odt."
 
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
@@ -6612,7 +6612,7 @@ msgid ""
 "Changing the Prior Financial Period may result in problems calculating "
 "closing account balances accurately and / or exporting of financial "
 "transactions. Do you want to proceed?"
-msgstr ""
+msgstr "Het wijzigen van de voorafgaande financiële periode kan problemen geven bij het accuraat berekenen van de balans en/of het exporteren van transacties. Wilt u doorgaan?"
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
