--- a/po/nl_NL/batch.po
+++ b/po/nl_NL/batch.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-10 15:54+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -247,7 +247,7 @@ msgstr "De veldtypes bestand en automatisch-aanvullen-selecteren in het geselect
 
 #: CRM/Batch/Form/Entry.php
 msgid "Transaction ID must be unique within the database"
-msgstr ""
+msgstr "Transactie-id moet uniek zijn"
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
