--- a/po/nl_NL/case.po
+++ b/po/nl_NL/case.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-10 15:51+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1143,7 +1143,7 @@ msgstr "Dossiers herstellen"
 
 #: CRM/Case/Task.php
 msgid "Print/merge Document"
-msgstr ""
+msgstr "Document afdrukken/samenvoegen"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Homeless Services Coordinator is"
