--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-09 18:03+0000\n"
-"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
+"PO-Revision-Date: 2016-12-10 15:55+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1915,7 +1915,7 @@ msgstr "Betalingsnummer"
 #: CRM/Event/Form/EventFees.php CRM/Member/Form/Membership.php
 #: CRM/Member/Form/MembershipRenewal.php
 msgid "Transaction ID already exists in Database."
-msgstr "Dit transactienummer bestaat al in de database."
+msgstr "Dit transactie-id bestaat al in de database."
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php CRM/Mailing/BAO/Mailing.php
 msgid "Template Title"
