--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-09 18:01+0000\n"
-"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
+"PO-Revision-Date: 2016-12-10 15:57+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2078,7 +2078,7 @@ msgstr "Verplicht veld 'Zacht krediet' ontbreekt"
 msgid ""
 "Invoice ID or Transaction ID or Contribution ID are required to match to the"
 " existing contribution records in Update mode."
-msgstr "Factuurnummer, transactienummer of bijdragenummer zijn verplicht om bij het bijwerken de bijbehorende bestaande bijdragerecords te vinden."
+msgstr "Factuurnummer, transactienummer of bijdragenummer is verplicht om bij de bijbehorende bijdragerecords te kunnen bijwerken."
 
 #: CRM/Contribute/Import/Form/MapField.php
 msgid ""
