--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-09-04 16:21+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-12-10 15:53+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1298,7 +1298,7 @@ msgstr "Totale Bijdrage, kosten betaalmethode eraf."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Transaction ID"
-msgstr "Transactienummer"
+msgstr "Transactie-id"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Unique Transaction ID from Payment Processor / Bank etc"
