po: update po/nl_NL/countries.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/countries.po
+++ b/po/nl_NL/countries.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Arnaud De Moyer <arnauddemoyer@gmail.com>, 2015
+# HanV <han.velthuis@home.nl>, 2016
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
 # Johan Beckers <johan@carecompany.be>, 2013
 # Kevin Levie <kevin@levity.nl>, 2016
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-10 15:41+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1052,20 +1053,20 @@ msgstr "Sint Maarten (Frans deel)"
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "Britse Maagdeneilanden"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "Ivoorkust"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "Iran"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "Macedonië"
 
 msgctxt "country"
 msgid "Palestinian Territory"
-msgstr ""
+msgstr "Palestina"
