--- a/po/nl_NL/provinces.po
+++ b/po/nl_NL/provinces.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-10 15:48+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15734,7 +15734,7 @@ msgstr "Phuket"
 
 msgctxt "province"
 msgid "Wake Island"
-msgstr ""
+msgstr "Wake Island"
 
 msgctxt "province"
 msgid "Northern Ostrobothnia"
@@ -15746,20 +15746,20 @@ msgstr "Telangana"
 
 msgctxt "province"
 msgid "Guadeloupe"
-msgstr ""
+msgstr "Guadeloupe"
 
 msgctxt "province"
 msgid "Martinique"
-msgstr ""
+msgstr "Martinique"
 
 msgctxt "province"
 msgid "Guyane"
-msgstr ""
+msgstr "Frans Guyana"
 
 msgctxt "province"
 msgid "La Réunion"
-msgstr ""
+msgstr "La Réunion"
 
 msgctxt "province"
 msgid "Mayotte"
-msgstr ""
+msgstr "Mayotte"
