--- a/po/sv_SE/report.po
+++ b/po/sv_SE/report.po
@@ -6,13 +6,14 @@
 # Isak Bergdahl <jahve@rocketmail.com>, 2013-2014
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2012,2014-2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2011-2012,2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-12 15:54+0000\n"
+"Last-Translator: Thomas Nilefalk <thomas.nilefalk@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1480,7 +1481,7 @@ msgstr "Filter"
 
 #: CRM/Report/Form.php
 msgid "Display Options"
-msgstr ""
+msgstr "Visningsalternativ"
 
 #: CRM/Report/Form.php
 msgid "Chart"
