--- a/po/it_IT/member.po
+++ b/po/it_IT/member.po
@@ -5,6 +5,7 @@
 # Translators:
 # Alessio <alessio@dba.it>, 2012
 # Andrea Ronchi <ronand@tiscali.it>, 2015-2016
+# francescodim francescodim <fd4work@gmail.com>, 2016
 # Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-09 21:33+0000\n"
-"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
+"PO-Revision-Date: 2016-12-12 12:55+0000\n"
+"Last-Translator: francescodim francescodim <fd4work@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2266,7 +2267,7 @@ msgstr ""
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Membership Information"
-msgstr ""
+msgstr "Informazioni di Adesione"
 
 #: xml/templates/message_templates/membership_autorenew_cancelled_subject.tpl
 msgid "Autorenew Membership Cancellation Notification"
