--- a/po/fr_FR/menu.po
+++ b/po/fr_FR/menu.po
@@ -11,6 +11,7 @@
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # F Boot <f2boot@gmail.com>, 2012
 # jean-guy avelin <jga974@gmail.com>, 2013
+# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
 # Nicolas <nicolas@cividesk.com>, 2013
 # Paul Caranton <caranton.paul@gmail.com>, 2015
 # Peter <webmaster@lebouclier.com>, 2016
@@ -26,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-14 23:49+0000\n"
-"Last-Translator: Vincent Tercelin <vincent.tercelin@gmail.com>\n"
+"PO-Revision-Date: 2016-12-14 00:00+0000\n"
+"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2177,7 +2178,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "Configurer CKEditor"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2213,27 +2214,27 @@ msgstr "Composants"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr ""
+msgstr "Extensions"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Mes comptes rendus"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "Détails de l'activité"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "Résumé des activités"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "Statistiques d'activité par type/date"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
