--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -38,8 +38,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-10 04:24+0000\n"
-"Last-Translator: mgregoire <mgregoire@mgregoire.net>\n"
+"PO-Revision-Date: 2016-12-13 08:13+0000\n"
+"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,7 +55,7 @@ msgstr "Type de contact de base"
 msgid ""
 "This contact type name already exists in database. Contact type names must "
 "be unique."
-msgstr "Ce nom de type de contact existe déjà dans la base de données. Les noms de types de contacts doivent être uniques."
+msgstr "Ce nom de type de contact existe déja dans la base de données. Les noms de types de contacts doivent être uniques."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Contact type names should not use reserved keywords."
