--- a/po/fr_FR/member.po
+++ b/po/fr_FR/member.po
@@ -7,6 +7,7 @@
 # Baptiste Bisson <inactive+baptisteb@transifex.com>, 2016
 # SR71 <ben.alard@gmail.com>, 2012
 # CARFIL <c.carfil.it@mairie-dammarie-les-lys.fr>, 2013
+# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe Migrenne <migrenne@gmail.com>, 2015
@@ -23,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 21:49+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-13 23:38+0000\n"
+"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,11 +52,11 @@ msgstr "Adhésion invalide"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Please select one of the memberships."
-msgstr "Sélectionnez un des types d'adhésion"
+msgstr "Sélectionnez un  type d'adhésion"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Please renew my membership automatically."
-msgstr "Merci de renouveler mon adhésion automatiquement."
+msgstr "Veuillez renouveler mon adhésion automatiquement."
 
 #: CRM/Member/BAO/Membership.php
 msgid "do not import"
