po: update po/pt_BR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/common-base.po
+++ b/po/pt_BR/common-base.po
@@ -32,7 +32,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-30 05:54+0000\n"
+"PO-Revision-Date: 2016-12-14 05:52+0000\n"
 "Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -9082,7 +9082,7 @@ msgstr "acessar todos os dados personalizados"
 
 #: CRM/Core/Permission.php
 msgid "View all custom fields regardless of ACL rules"
-msgstr ""
+msgstr "Ver todos os campos personalizados independente de regras ACL"
 
 #: CRM/Core/Permission.php
 msgid "view all activities"
@@ -9090,7 +9090,7 @@ msgstr "ver todas as atividades..."
 
 #: CRM/Core/Permission.php
 msgid "View all activities (for visible contacts)"
-msgstr ""
+msgstr "Ver todas as atividades (para contatos visíveis)"
 
 #: CRM/Core/Permission.php
 msgid "Delete activities"
@@ -9142,7 +9142,7 @@ msgstr "administrar regras de deduplicação"
 
 #: CRM/Core/Permission.php
 msgid "Create and edit rules, change the supervised and unsupervised rules"
-msgstr ""
+msgstr "Cria e edita regras, muda as regras supervisionadas ou não"
 
 #: CRM/Core/Permission.php
 msgid "merge duplicate contacts"
@@ -9150,7 +9150,7 @@ msgstr "mesclar contatos duplicados"
 
 #: CRM/Core/Permission.php
 msgid "Delete Contacts must also be granted in order for this to work."
-msgstr ""
+msgstr "Deletar Contatos também deve ser permitido para que isto funcione."
 
 #: CRM/Core/Permission.php
 msgid "view debug output"
@@ -9174,7 +9174,7 @@ msgstr "Acesso ao AJAX API"
 
 #: CRM/Core/Permission.php
 msgid "Allow API access even if Access CiviCRM is not granted"
-msgstr ""
+msgstr "Permite acesso API mesmo se Acessar CiviCRM não for concedido"
 
 #: CRM/Core/Permission.php
 msgid "access contact reference fields"
@@ -9182,7 +9182,7 @@ msgstr "acessar campos de referência do contato"
 
 #: CRM/Core/Permission.php
 msgid "Allow entering data into contact reference fields"
-msgstr ""
+msgstr "Permite a inserção de dados nos campos de referência do contato"
 
 #: CRM/Core/Permission.php
 msgid "create manual batch"
@@ -9192,7 +9192,7 @@ msgstr "criar lote manual"
 msgid ""
 "Create an accounting batch (with Access to CiviContribute and View Own/All "
 "Manual Batches)"
-msgstr ""
+msgstr "Cria um lote de contabilidade (com Acesso ao CiviContribute e Visualizar Próprio/Todos os Lotes Manuais)"
 
 #: CRM/Core/Permission.php
 msgid "edit own manual batches"
@@ -9200,7 +9200,7 @@ msgstr "editar lotes manuais próprios"
 
 #: CRM/Core/Permission.php
 msgid "Edit accounting batches created by user"
-msgstr ""
+msgstr "Editar lotes de contabilidade criados pelo usuário"
 
 #: CRM/Core/Permission.php
 msgid "edit all manual batches"
