--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-15 09:21+0000\n"
+"PO-Revision-Date: 2016-12-15 09:57+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -17108,7 +17108,7 @@ msgstr "Bloquejat - Baixa"
 
 #: templates/CRM/Contact/Page/Inline/Email.tpl
 msgid "Bulk"
-msgstr "Voluminós"
+msgstr "Correu massiu"
 
 #: templates/CRM/Contact/Page/Inline/Email.tpl
 msgid "(signature)"
