--- a/po/fr_FR/event.po
+++ b/po/fr_FR/event.po
@@ -10,6 +10,7 @@
 # Christophe BENZ <christophe.benz@gmail.com>, 2011
 # Christophe BENZ <christophe.benz@gmail.com>, 2011
 # fr rev <e2ffr02@hotmail.com>, 2015
+# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Paul Caranton <caranton.paul@gmail.com>, 2015
 # Peter <webmaster@lebouclier.com>, 2016
@@ -25,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 21:49+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-15 23:02+0000\n"
+"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3934,7 +3935,7 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Thank you for your participation."
-msgstr "Merci de participer."
+msgstr "Merci de votre participation."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
