po: update po/fr_FR/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -12,7 +12,8 @@
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Guillaume <guillaume@ordi-service.fr>, 2016
-# Mathieu Lutfy <mathieu@bidon.ca>, 2014-2015
+# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
+# Mathieu Lu <mathieu@bidon.ca>, 2014-2015
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Vincent Hammadache <vhammadache@gmail.com>, 2015
 # Vincent <vincent.primault@gmail.com>, 2014
@@ -21,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 21:49+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-16 00:11+0000\n"
+"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -121,7 +122,7 @@ msgstr "Version de MySQL >= %1"
 
 #: install/index.php
 msgid "MySQL version %1 or higher is required, you are running MySQL %2."
-msgstr "Une version >= %1 est requise. Vous utilisez actuellement la version %2."
+msgstr "Une version MySQL >= %1 est requise. Vous utilisez actuellement la version %2."
 
 #: install/index.php
 msgid "MySQL %1"
@@ -161,7 +162,7 @@ msgstr "Je ne peux pas créer de nouvelles base de données et la base '%1' n'ex
 
 #: install/index.php
 msgid "Can I access/create InnoDB tables in the database?"
-msgstr "Puis-je accéder à/créer des tableaux InnoDB dans la base de données ?"
+msgstr "Puis-je accéder à/créer des tables InnoDB dans la base de données ?"
 
 #: install/index.php
 msgid ""
@@ -177,16 +178,16 @@ msgstr "Est-il possible de créer des tables temporaires dans la base de donnée
 msgid ""
 "Unable to create temporary tables. This MySQL user is missing the CREATE "
 "TEMPORARY TABLES privilege."
-msgstr "Impossible de créer des tableaux temporaires. Cet utilisateur MySQL n'a pas le privilège CRÉER DES TABLEAUX TEMPORAIRES."
+msgstr "Impossible de créer des tables temporaires. Cet utilisateur MySQL n'a pas le privilège  de CRÉER DES TABLES TEMPORAIRES."
 
 #: install/index.php
 msgid "Can I create lock tables in the database?"
-msgstr "Est-ce que je peux créer des tableaux verrouillés dans la base de données ?"
+msgstr "Est-ce que je peux créer des tables verrouillés dans la base de données ?"
 
 #: install/index.php
 msgid ""
 "Unable to lock tables. This MySQL user is missing the LOCK TABLES privilege."
-msgstr "Impossible de verrouiller les tableaux. Cet utilisateur MySQL n'a pas le privilège VERROUILLER TABLEAUX."
+msgstr "Impossible de verrouiller les tables. Cet utilisateur MySQL n'a pas le privilège de VERROUILLER TABLES."
 
 #: install/index.php
 msgid "Can I create triggers in the database?"
@@ -228,11 +229,11 @@ msgstr "Le chemin %1 contient PATH_SEPARATOR (le caractère %2)."
 
 #: install/index.php
 msgid "Folder '%1' exists?"
-msgstr "Le dossier '%1' existe-t-il ?"
+msgstr "Le répertoire '%1' existe-t-il ?"
 
 #: install/index.php
 msgid "There is no '%1' folder."
-msgstr "Le dossier '%1' est introuvable."
+msgstr "Le répertoire '%1' est introuvable."
 
 #: install/index.php
 msgid "Is the %1 folder writeable?"
@@ -254,7 +255,7 @@ msgstr "Serveur Web reconnu"
 msgid ""
 "You seem to be using an unsupported webserver. The server variables "
 "SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME need to be set."
-msgstr "Il semble que vous utilisiez un serveur web non pris en charge. Les variables du serveur SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME besoin d'être réglé.\\"
+msgstr "Il semble que vous utilisiez un serveur web non pris en charge. Les variables du serveur SCRIPT_NAME,  HTTP_HOST,  SCRIPT_FILENAME  ont besoin d'être réglées"
 
 #: install/index.php
 msgid "JSON support"
@@ -273,7 +274,7 @@ msgid ""
 "XCache is installed and there are known compatibility issues between XCache "
 "and CiviCRM. Consider using an alternative PHP caching mechanism or disable "
 "PHP caching altogether."
-msgstr "XCache is installed and there are known compatibility issues between XCache and CiviCRM. Consider using an alternative PHP caching mechanism or disable PHP caching altogether."
+msgstr "XCache est installé et il existe des problèmes de compatibilité connus entre XCache et CiviCRM. Pensez à utiliser un autre mécanisme de cache PHP ou désactivez la mise en cache PHP."
 
 #: install/index.php
 msgid "Memory allocated (PHP config option 'memory_limit')"
@@ -312,7 +313,7 @@ msgstr "Version PHP %1 n'est pas supporté. Une version PHP antérieur à %2 est
 
 #: install/index.php
 msgid "file '%1' not found"
-msgstr "Dossier '%1' non trouvé"
+msgstr "fichier '%1' non trouvé"
 
 #: install/index.php
 msgid "file '%1' found"
@@ -400,7 +401,7 @@ msgstr "Capable de créer une nouvelle base de donnée."
 
 #: install/index.php
 msgid "user '%1' doesn't have CREATE DATABASE permissions."
-msgstr "L'utilisateur '%1' n'a pas l'autorisation CRÉER BASE DE DONNÉES."
+msgstr "L'utilisateur '%1' n'a pas l'autorisation :  CRÉER BASE DE DONNÉES."
 
 #: install/index.php
 msgid "the following PHP variables are missing: %1"
@@ -414,7 +415,7 @@ msgstr "Oups ! Impossible de créer base de données %1"
 msgid ""
 "We encountered an error when attempting to create the database. Please check"
 " your MySQL server permissions and the database name and try again."
-msgstr "Nous avons rencontré une erreur lors de la tentative de créer la base de données. S'il vous plaît vérifier vos autorisations sur le serveur MySQL et le nom de la base de données et essayer à nouveau."
+msgstr "Nous avons rencontré une erreur lors de la tentative de créer la base de données. Veuillez vérifier vos autorisations sur le serveur MySQL,  le nom de la base de données et essayer à nouveau."
 
 #: install/index.php
 msgid ""
@@ -446,7 +447,7 @@ msgid ""
 "authenticated users access to public CiviCRM forms and features. We "
 "recommend that you <a %1>review these permissions</a> to ensure that they "
 "are appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr "Les permissions des utilisateurs Drupal ont été automatiquement définies - permettant l'accès aux formulaires et aux fonctionnalités publics de CiviCRM pour les utilisateurs anonymes et authentifiés. Nous vous recommandons de <a %1>vérifier ces permissions</a> pour vous assurer qu'elle sont conformes à vos besoins (<a %2>pour en savoir plus...</a>)"
+msgstr "Les permissions des utilisateurs Drupal ont été automatiquement définies - permettant aux utilisateurs anonymes et authentifiés d'accéder aux formulaires et aux fonctionnalités publiques de CiviCRM. Nous vous recommandons de <a %1> vérifier ces permissions </a> pour vous assurer qu'elle sont conformes à vos besoins (<a %2>pour en savoir plus...</a>)"
 
 #: install/index.php
 msgid ""
@@ -460,7 +461,7 @@ msgid ""
 "and Subscribers access to public CiviCRM forms and features. We recommend "
 "that you <a %1>review these permissions</a> to ensure that they are "
 "appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr "Les autorisations des utilisateurs de WordPress ont été automatiquement fixées - en donnant aux anonymes et aux abonnés l'accès aux formulaires et aux fonctions publiques de CiviCRM. Nous vous recommandons de <a %1> revoir ces autorisations </a> pour assurer qu'ils sont appropriés à vos besoins (<a %2> en savoir plus ... </a>)"
+msgstr "Les autorisations des utilisateurs de WordPress ont été automatiquement définies permettant aux anonymes et aux abonnés l'accès aux formulaires et aux fonctions publiques de CiviCRM. Nous vous recommandons de <a %1> revoir ces autorisations </a> pour assurer qu'elles  sont appropriées à vos besoins (<a %2> en savoir plus ... </a>)"
 
 #: install/index.php
 msgid "<a %1>Refer to the online documentation for more information</a>"
@@ -491,7 +492,7 @@ msgid ""
 "There are some issues that we recommend you look at before installing, "
 "however, you are still able to install the software.  Please see below for "
 "details."
-msgstr "Nous vous recommandons de jeter un œil à certains points avant de procéder à l'installation, cependant, vous pouvez passer outre et installer le logiciel. Pour plus de détails merci de vous référer ci-dessous."
+msgstr "Nous vous recommandons de vérifier certains points avant de procéder à l'installation, cependant, vous pouvez passer outre et installer le logiciel. Pour plus de détails merci de vous référer ci-dessous."
 
 #: install/template.html
 msgid "You're ready to install!"
@@ -532,7 +533,7 @@ msgstr "Changer de langage"
 
 #: install/template.html
 msgid "Database Version and Connection Settings"
-msgstr "Version de la base de données et paramètres de la connexion"
+msgstr "Version de la base de données et paramètres de connexion"
 
 #: install/template.html
 msgid ""
@@ -546,7 +547,7 @@ msgstr "CiviCRM stocke son contenu dans une base MySQL. Merci d'indiquer ici le 
 msgid ""
 "Your database settings don't appear to be correct. Please check the <a "
 "href='%1'>Database Details</a> below for specific errors."
-msgstr "Les paramètres de votre base de données semble incorrects. Merci de vérifier les <a href='%1'>Détails de la base de données</a> ci-dessous pour corriger d'éventuelles erreurs."
+msgstr "Les paramètres de votre base de données semblent incorrects. Merci de vérifier les <a href='%1'> détails de la base de données</a> ci-dessous pour corriger d'éventuelles erreurs."
 
 #: install/template.html
 msgid ""
@@ -600,15 +601,15 @@ msgstr "Prérequis"
 
 #: install/index.php
 msgid "[your Backdrop root directory]"
-msgstr ""
+msgstr "[Votre répertoire racine Backdrop]"
 
 #: install/index.php
 msgid "This installer can only be used for the Backdrop version of CiviCRM."
-msgstr ""
+msgstr "Ce programme d'installation ne peut être utilisé que pour la version Backdrop de CiviCRM."
 
 #: install/index.php
 msgid "Oops! Incorrect Backdrop version"
-msgstr ""
+msgstr "Oops! Version de backdrop incorrecte"
 
 #: install/index.php
 msgid ""
