po: update po/fr_FR/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/batch.po
+++ b/po/fr_FR/batch.po
@@ -5,6 +5,7 @@
 # Translators:
 # Bronner Matthieu <mat.bronner@hotmail.fr>, 2013
 # Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
+# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
 # Nicolas <nicolas@cividesk.com>, 2013
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-12-15 23:25+0000\n"
+"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +25,7 @@ msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch %1"
-msgstr "Groupe %1"
+msgstr "Lot %1"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Transactions"
@@ -40,7 +41,7 @@ msgstr "Ré-ouvrir le groupe"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Delete Batch"
-msgstr ""
+msgstr "Supprimer le lot"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -227,7 +228,7 @@ msgstr "Aucun lot d'entrée de données n'a été créé pour ce site."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Method"
-msgstr ""
+msgstr "Méthode de paiement par lot"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch ID"
@@ -262,4 +263,4 @@ msgstr ""
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Custom fields and a Personal Campaign Page field can be added if needed."
-msgstr ""
+msgstr "Des champs personnalisés et un champ de page de campagne personnelle peuvent être ajoutés si nécessaire."
