po: update po/fr_FR/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/member.po
+++ b/po/fr_FR/member.po
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-13 23:38+0000\n"
+"PO-Revision-Date: 2016-12-15 14:42+0000\n"
 "Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -441,7 +441,7 @@ msgstr "Enregistrer le paiement d'adhésion est obligatoire lorsque vous utilise
 
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipType.php
 msgid "Please enter the financial Type."
-msgstr "Merci de saisir le type de paiement."
+msgstr "Veuillez saisir un moyen de paiement."
 
 #: CRM/Member/Form/Membership.php
 msgid "Please Select a Soft Credit Type"
@@ -2121,7 +2121,7 @@ msgid ""
 "start date is set to January 1. A person signs up for membership on February"
 " 15th, 2008. Their membership start date is set to January 1, 2008 - and the"
 " end date is December 31, 2008."
-msgstr "<strong>Période d'adhésion fixe — durée d'un an :</strong> la date de départ est fixée au 1er janvier. L'adhésion d'une personne qui adhère le 15 février 2008 commence le 1er janvier 2008 et se termine le 31 décembre 2008."
+msgstr "<strong>Période d'adhésion fixe — durée d'un an :</strong> la date de départ est fixée au 1er janvier. L'adhésion d'une personne qui adhère le 15 février 2015 commence le 1er janvier 2015 et se termine le 31 décembre 2015."
 
 #: templates/CRM/Member/Page/MembershipType.hlp
 msgid ""
@@ -2135,7 +2135,7 @@ msgid ""
 "<strong>Rolling Membership Period - 1 Year Duration:</strong> A person signs"
 " up on February 15th, 2008. Their membership start date is February 15th, "
 "2008 - and the end date is February 14th, 2009."
-msgstr "<strong>Période d'adhésion glissante — durée d'un an :</strong> L'adhésion d'une personne qui adhère le 15 février 2008 commence le 15 février 2008 et se termine le 14 février 2009."
+msgstr "<strong>Période d'adhésion glissante — durée d'un an :</strong> L'adhésion d'une personne qui adhère le 15 février 2015 commence le 15 février 2015 et se termine le 14 février 2016."
 
 #: templates/CRM/Member/Page/MembershipType.tpl
 msgid ""
@@ -2441,7 +2441,7 @@ msgstr ""
 msgid ""
 "For auto-renewing memberships the emails are sent when each payment is "
 "received"
-msgstr ""
+msgstr "Pour les  auto-renouvellement d'abonnements, les courriels sont envoyés lorsque chaque paiement est reçu"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Membership Status Is Override?"
