po: update po/fr_FR/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/menu.po
+++ b/po/fr_FR/menu.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-14 00:00+0000\n"
+"PO-Revision-Date: 2016-12-16 00:37+0000\n"
 "Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -92,7 +92,7 @@ msgstr "Libérer les répondants"
 
 msgctxt "menu"
 msgid "Record Respondents Interview"
-msgstr "Enregistrer l'entrevue du répondant"
+msgstr "Enregistrer l'entretien du contact"
 
 msgctxt "menu"
 msgid "GOTV (Track Voters)"
@@ -193,7 +193,7 @@ msgstr "Médias de rencontres"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
-msgstr "Tableau de bord CiviContribute"
+msgstr "Tableau de bord des contributions"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -202,7 +202,7 @@ msgstr "Nouvelle contribution"
 
 msgctxt "menu"
 msgid "Contribution Summary - Chart View"
-msgstr "Tableau des contributions - vue graphique"
+msgstr "Tableau des contributions - Vue graphique"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -236,7 +236,7 @@ msgstr "Remerciement et émission de reçu"
 
 msgctxt "menu"
 msgid "Tell a Friend"
-msgstr "Recommander à un ami"
+msgstr "Recommander à un ami ou une amie"
 
 msgctxt "menu"
 msgid "Configure Widget"
@@ -300,7 +300,7 @@ msgstr "Contributions Récurrentes"
 
 msgctxt "menu"
 msgid "Additional Info"
-msgstr "Info additionnelles"
+msgstr "Info additionnelle"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -330,7 +330,7 @@ msgstr "Mettre à jour l'abonnement"
 
 msgctxt "menu"
 msgid "Financial Type Accounts"
-msgstr "Comptes Types d'opération"
+msgstr "Type de Comptes "
 
 msgctxt "menu"
 msgid "Accounting Batch"
@@ -391,7 +391,7 @@ msgstr "Données personnalisées"
 
 msgctxt "menu"
 msgid "Custom Data Fields"
-msgstr "Données personnalisées"
+msgstr "Champs de données personnalisées"
 
 msgctxt "menu"
 msgid "Custom Field - Options"
@@ -788,7 +788,7 @@ msgstr "Rechercher des contacts"
 
 msgctxt "menu"
 msgid "Process Uploaded Images"
-msgstr "Traiter les images téléversées"
+msgstr "Traiter les images téléchargées"
 
 msgctxt "menu"
 msgid "Get Image File"
@@ -797,7 +797,7 @@ msgstr "Récupérer le fichier image"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Advanced Search"
-msgstr "Recherche multicritère"
+msgstr "Recherche avancée"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -872,7 +872,7 @@ msgstr "Groupes"
 
 msgctxt "menu"
 msgid "Smart Groups"
-msgstr "Groupes intelligents"
+msgstr "Groupes dynamiques"
 
 msgctxt "menu"
 msgid "Sunlight"
@@ -1109,7 +1109,7 @@ msgstr "Information et paramètres sur l'événement"
 
 msgctxt "menu"
 msgid "Event Location"
-msgstr "Emplacement de l'événement"
+msgstr "Lieu de l'événement"
 
 msgctxt "menu"
 msgid "Event Fees"
@@ -1337,7 +1337,7 @@ msgstr "Gestion des modèles"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register Report"
-msgstr "Nouveau rapport"
+msgstr "Enregistrement"
 
 msgctxt "menu"
 msgid "Report"
@@ -1350,7 +1350,7 @@ msgstr "Liste des comptes rendus"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM News"
-msgstr "Nouvelles CiviCRM"
+msgstr "Nouvelles de CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1425,17 +1425,17 @@ msgstr "Cadeaux de remerciement"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Batch"
-msgstr "Nouveau Batch"
+msgstr "Nouveau lot"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Open Batches"
-msgstr "Batchs ouverts"
+msgstr "Lots ouverts"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Closed Batches"
-msgstr "Batchs fermés"
+msgstr "Lots fermés"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
