po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-26 08:41+0000\n"
+"PO-Revision-Date: 2016-12-18 19:11+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1183,11 +1183,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Monetary Amount Display"
-msgstr ""
+msgstr "Prikaz iznosa monetarne vrednosti"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Monetary Value Display"
-msgstr ""
+msgstr "Prikaz monetarne vrednosti"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Available Countries"
@@ -1195,7 +1195,7 @@ msgstr "Dostupne zemlje"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Available States and Provinces"
-msgstr ""
+msgstr "Dostupne države i provincije"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default Country"
@@ -1207,7 +1207,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default Currency"
-msgstr ""
+msgstr "Podrazumevana valuta"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Available Currencies"
@@ -1356,7 +1356,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Temporary Files"
-msgstr ""
+msgstr "Privremeni fajlovi"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Images"
@@ -2004,19 +2004,19 @@ msgstr ""
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Edit this message template"
-msgstr ""
+msgstr "Uredi ovaj šablon poruke"
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Disable this message template"
-msgstr ""
+msgstr "Isključi ovaj šablon poruke"
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Enable this message template"
-msgstr ""
+msgstr "Uključi ovaj šablon poruke"
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Delete this message template"
-msgstr ""
+msgstr "Obriši ovaj šablon poruke"
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Revert to Default"
@@ -2138,7 +2138,7 @@ msgstr ""
 
 #: CRM/Admin/Page/ScheduleReminders.php
 msgid "Edit Schedule Reminders"
-msgstr ""
+msgstr "Uredi zakazane podsetnike"
 
 #: CRM/Admin/Page/ScheduleReminders.php
 msgid "Enable Label Format"
@@ -2150,7 +2150,7 @@ msgstr "Isključi format oznake"
 
 #: CRM/Admin/Page/ScheduleReminders.php
 msgid "Delete Schedule Reminders"
-msgstr ""
+msgstr "Obriši zakazane podsetnike"
 
 #: CRM/Admin/Page/Setting.php
 msgid "Global Settings"
@@ -2292,7 +2292,7 @@ msgstr "Isključi se"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
-msgstr ""
+msgstr "Nova povezivanja"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
@@ -2342,7 +2342,7 @@ msgstr "Isključeno"
 msgid ""
 "The page \"%1\" will open in a popup. If it does not appear automatically, "
 "check your browser for notifications."
-msgstr ""
+msgstr "Stranica \"%1\" će se otvoriti u popup prozoru. Ukoliko se ne pojavi automatski proverite notifikacije u vašem pretraživaču."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Cannot open link. Unrecognized mode."
@@ -2490,7 +2490,7 @@ msgstr ""
 msgid ""
 "WARNING: Deleting this option will result in the loss of all location type "
 "records which use the option."
-msgstr ""
+msgstr "Upozorenje: Brisanjem ove opcije će doći do gubitka svih zapisa tipa lokacija koji koriste ovu opciju."
 
 #: templates/CRM/Admin/Form/LocationType.tpl
 msgid "WARNING: Do NOT use spaces in the Location Name."
@@ -2558,15 +2558,15 @@ msgstr "UPOZORENJE: Da li ste sigurni da želite da obrišete mapiranje '<b>%1</
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "New Message Template"
-msgstr ""
+msgstr "Novi šablon poruke"
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Edit Message Template"
-msgstr ""
+msgstr "Uredi šablon poruke"
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Delete Message Template"
-msgstr ""
+msgstr "Obriši šablon poruke"
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Use this form to add or edit re-usable message templates."
@@ -2600,7 +2600,7 @@ msgstr "Tekst formatirane poruke."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Page format to use when creating PDF files using this template."
-msgstr ""
+msgstr "Format stranice koji će se koristiti pri kreiranju PDF fajlova koji koriste ovaj šablon."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "token documentation"
@@ -2855,7 +2855,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid "Mailing Label Tokens"
-msgstr ""
+msgstr "Tokeni za oznake mailinga"
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid ""
@@ -3216,7 +3216,7 @@ msgstr "Uključi ponavljanje."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "You can manually send out the reminders to these recipients."
-msgstr ""
+msgstr "Ovim učesnicima možete ručno poslati podsetnike."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Email Screen"
